# practical-python-for-algorithmic-trading

./: .gitignore  main.py  pyproject.toml  requirements.txt
notebooks-course/: 01A_Data Preprocessing.ipynb  01B_Data Preprocessing.ipynb  02A_Machine Learning Classification Model.ipynb  03A_Backtesting ML Classification-Based.ipynb  03B_Backtesting ML Classification-Based.ipynb  03C_Backtesting ML Classification-Based.ipynb  03D_Backtesting ML Classification-Based.ipynb  backtest_report.html
notebooks-course/data/: BTC-USD.csv  BTC-USD.xlsx  Microsoft_Stock_Price_Historical_Daily.csv  Microsoft_Stock_Price_Historical_Daily.xlsx
notebooks-course/models/: my_model.pkl
