[project]
name = "practical-python-for-algorithmic-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtesting>=0.6.5",
    "future>=1.0.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "scikit-optimize>=0.10.2",
    "tabulate>=0.9.0",
    "yfinance>=0.2.66",
]
